--- a/arex-instrumentation-foundation/src/test/resources/arex.agent.conf
+++ b/arex-instrumentation-foundation/src/test/resources/arex.agent.conf
@@ -1,3 +1,3 @@
-arex.service.name=test-your-service-config-path
-arex.storage.service.host=test-storage-service.host-config-path
+arex.service.name=uwp-serve
+arex.storage.service.host=127.0.0.1:10030
 arex.dynamic.class=java.lang.System
