--- a/arex-instrumentation/pom.xml
+++ b/arex-instrumentation/pom.xml
@@ -42,6 +42,7 @@
         <module>httpclient/arex-httpclient-okhttp-v3</module>
         <module>httpclient/arex-httpclient-apache-v4</module>
         <module>httpclient/arex-httpclient-webclient-v5</module>
+        <module>httpclient/arex-httpclient-webclient-v2</module>
         <module>httpclient/arex-httpclient-resttemplate</module>
         <module>httpclient/arex-httpclient-feign</module>
         <module>httpclient/arex-httpclient-ning</module>
